# commandclaw

./: .env.example  .gitignore  ANTIPATTERNS.md  BACKLOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  TEST.md  branding.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: tdd-green.md  tdd-red.md  tdd-refactor.md
architecture/: README.md  commandclaw-gateway.md  commandclaw-mcp.md  commandclaw-memory.md  commandclaw-observe.md  commandclaw-skills.md  commandclaw-vault.md  commandclaw-wiki.md  commandclaw.md
brainstorming/issue-003-memory-architecture/: notes.md
guiding_docs/: DEVLOG.md  LOGO_CONVENTIONS.md  MEMORY_PLAN.md  PLAN.md  VISION.md
guiding_docs/archive/: PLAN-2026-04-06.md
guiding_docs/devlog/: 2026-04-06.md  2026-04-07.md  INSTRUCTIONS.md
plan/: .planconfig  CRAZY.md  PLAN.md
plan/close-runtime-span-on-exception/: 01-research.md
plan/complete-tools-init/: 01-research.md
plan/dedup-tool-assembly/: 01-research.md
plan/extract-vault-path-validator/: 01-research.md
plan/inject-nemo-api-key/: 01-research.md
plan/mcp-package-interface/: 01-research.md  02-requirements.md  04-backlog-item.md
plan/message-queue/: 01-research.md  02-requirements.md  03-deep-research.md  04-backlog-item.md
plan/model-token-table/: 01-research.md
plan/runtime-max-tokens-default/: 01-research.md
scripts/: docker-entrypoint.sh  migrate-from-openclaw.sh  spawn-agent.sh
src/commandclaw/: chat.py  (+5 more)
tests/: conftest.py  test_agent_retry.py  test_tools_bash.py  test_tools_files.py  test_vault_git_ops.py  test_vault_memory.py  test_vault_skills.py
tui-client/: index.tsx  package.json  tsconfig.json
(+166 files in other folders)
