[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commandclaw"
version = "0.1.0"
description = "Git-native AI agent platform — vault is the control plane"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Shikhar", email = "shikhar@commandclaw.dev" }]

dependencies = [
    "langchain>=1.2",
    "langchain-openai>=1.1",
    "langgraph>=1.1",
    "langgraph-checkpoint-sqlite>=3",
    "python-telegram-bot>=21,<22",
    "langfuse>=4",
    "gitpython>=3.1,<4",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "python-frontmatter>=1,<2",
    "python-dotenv>=1,<2",
    "mcp>=1,<2",
    "nemoguardrails>=0.21",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "detect-secrets>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
    "ruff>=0.8,<1",
]

[project.scripts]
commandclaw = "commandclaw.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/commandclaw"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: touches real disk, git, or sqlite — slower than unit",
    "agent: end-to-end agent graph with a fake LLM — deterministic",
    "e2e: hits a real LLM API and Langfuse — opt-in, requires keys",
    "mcp: needs a running MCP gateway",
]
